  - [oarnodes] Update usage and man page
  - [oarsub] add a reservation end time possibility to -r option
  - [oarsub] factorize the reservation parsing in interactive condition
  - [oarsub] be more flexible about the reservation dates parsing
  - [oarsub] add the 'now' keyword support to reservation request
  - [man] rework oarsub man page
  - [oarsub] update usage

version 2.5.9:
--------------

  - [scheduler] add the SCHEDULER_RESOURCE_ORDER_ADV_RESERVATIONS option, so
    that the scheduling of advance reservations is not impacted by the current
    state of the resources (e.g. nodes in standby, current besteffort jobs)
  - [admission rules] add an admission rule to restrict advance reservation
    inner jobs to use container jobs that are advance reservations as well
  - [schedulers] fix issues with the scheduling of a inner job before its
    container
  - [schedulers] waiting inner job in container that vanished are set to error
  - [oarexec] add an option to have inner jobs killed along with their container
  - [oarexec] do not run inner jobs before their container is already running
  - [oarwalltime] make walltime change respect a possibly defined job deadline
  - [oarwalltime] add an option to disable the walltime reduction
  - [oarwalltime] fix oarwalltime the per queue configuration
  - [oarsub/scheduler] fix a bug with the recent Perl max recursion depth limit
  - [drawgantt] show the timezone in the dates
  - [oarexec] fix oarsub shell termination when the job is killed
  - [database] add an index to the resource_log table
  - [oar_resource_add] add support for reparing the resource properties
  - [oarexec] add support to disable the auto-repair of suspected nodes
  - [job_resource_manager/oarsh] add the COMPUTE_THREAD_SIBLINGS option, to let
    OAR automatically set the HT thread siblings if not set in the resources
    hierarchy with a thread resource, or in the resource cpuset field